<?xml version="1.0"?>
<package>
    <name>torcs_img_publisher</name>
    <version>0.0.0</version>
    <description>The torcs_img_publisher package</description>

    <maintainer email="florian.mirus@gmx.net">Florian Mirus</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>image_transport</build_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
