<?xml version="1.0"?>
<package>
    <name>torcs_ros_bringup</name>
    <version>0.0.0</version>
    <description>The torcs_ros_bringup package</description>

    <maintainer email="florian.mirus@gmx.net">Florian Mirus</maintainer>

    <license>TODO</license>

    <run_depend>torcs_ros_drive_ctrl</run_depend>
    <run_depend>torcs_ros_client</run_depend>
    <run_depend>torcs_img_publisher</run_depend>
    <run_depend>rviz2</run_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
