<?xml version="1.0"?>
<package>
    <name>torcs_ros_drive_ctrl</name>
    <version>0.0.0</version>
    <description>The torcs_ros_drive_ctrl package</description>

    <maintainer email="florian.mirus@gmx.net">Florian Mirus</maintainer>

    <license>TODO</license>


    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>torcs_interfaces</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
